<resources>
    <string name="strue_Btn">对</string>
    <string name="sfalse_Btn">错</string>
    <string name="correct_toast">答对了!</string>
    <string name="incorrect_toast">答错了!</string>
    <string name="app_name">地理知识小测验</string>
    <string name="next_button">下一题</string>
    <string name="back_button">上一题</string>
    <string name="question_oceans">太平洋比大西洋大吗?</string>
    <string name="question_mideast">苏伊士运河连接红海和印度洋吗?</string>
    <string name="question_africa">非洲约占世界陆地总面积的 50 %,为世界第一大洲吗?</string>
    <string name="question_americas">美国土著居民是印第安人吗?</string>
    <string name="question_asia">中国陆地面积约960万平方公里，在世界各国中，仅次于俄罗斯、加拿大，居第三位，差不多同整个欧洲面积相等吗?</string>
    <string name="score">得分：0</string>
    <string name="username_tv">尊姓大名：</string>
    <string name="passwd_tv">密码：</string>
    <string name="login_tv">开始！</string>
    <string name="warning_text">你确定?</string>
    <string name="show_answer_button">显示答案</string>
    <string name="cheat_button">偷看答案!</string>
    <string name="judgment_toast">偷看答案可不好.</string>
    <string name="backtoQues_Text">回去继续做题</string>
    <string name="version_name">0.2</string>
    <string name="version_code">2</string>
    <string name="welcome_text">欢迎来到地理知识小测验!</string>
    <string name="welcome_intro">\n这里有几道题测测你对地理常识的了解程度。\n现在，快在下面输入您的姓名，开始这一激动人心的测试吧！
    </string>
    <string name="isacheater_str">是</string>
    <string name="welcome_report">您的答题报告如下：</string>
</resources>
